# EverMind-LongContext-Agent

./: .dockerignore  .gitignore  DATABASE-SETUP.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DYNAMIC_TITLES_SUMMARY.md  Dockerfile  FEATURE_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  README.md  SUBMISSION_SUMMARY.md  SYSTEM_RESET_GUIDE.md  TOOLS_IMPLEMENTATION_SUMMARY.md  TOOL_SETUP.md  VISIBILITY-FIXES.md  check-database.ps1  package.json  render.yaml  setup-local.ps1  start-project.ps1
backend/: .dockerignore  .env.example  .env.production  DATABASE_URL_ANALYSIS.md  Dockerfile  activate.ps1  agent.py  build.sh  database.py  inspect_db.py  main.py  memory_manager.py  pyproject.toml  requirements.txt  retriever.py  start.py  start.sh  summarizer.py  title_generator.py  utils.py
frontend/: .env.development  index.html  package.json  start-dev.ps1  tailwind.config.js  test-chat.md  vercel.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ConnectionStatus.tsx  Layout.tsx  Message.tsx  MetricsDisplay.tsx  SessionSidebar.tsx  SystemResetButton.tsx
frontend/src/hooks/: useApi.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ChatPage.tsx  MemoryPage.tsx  MetricsPage.tsx
shared/: models.py
tools/: __init__.py  base.py  calculator.py  web_search.py
